--- a/#2.md
+++ b/#2.md
@@ -3,8 +3,8 @@
 * index.jsと同じ階層にindex.jsのコピーとしてabout.jsの作成
   - コマンド + C,　コマンド + V　
   * indexページのWelcom toをindex pageに変更
-  * aタグ部分を削除
-  * aboutページはabout pageに変更
+  * aタグ部分を削除 <a href="https://nextjs.org">Next.js!</a>
+  * aboutページはabout pageに変更 
   * aタグ部分を削除
 ## コンポーネントの作り方
 ### Headタグ内のtitleの変更
@@ -21,7 +21,7 @@
 * index.jsでFooter.jsの呼び出し
 * about.jsでも同様にする
 ### Links.jsの作成
-* divタグ部分をコピー
+* divタグ部分"＜div className={styles.grid}＞"をコピー
 #### index.js about.jsの変更
 * index.js about.jsでLinks.jsの呼び出し
 ---
@@ -34,6 +34,8 @@
 * Powered byをThanks byに変更
 ---
 #### GitHubへのpush,Vercelへデプロイ
+> コミット
+- ♻️ Footer部分とLink部分をコンポーネント化
 
 
 
