--- a/#3.md
+++ b/#3.md
@@ -5,8 +5,9 @@
 ### main タグ内 h1 タグ p タグをコンポーネント化
 
 - Headline.js の作成
-  - h1 タグと p タグのコピー
-  - 親要素が必要なので h1 と p を<></>　か div で囲む
+  - - index.jsを全コピー＆ペースト
+  - h1 タグと p タグ以外は削除
+  -  親要素が必要なので h1 と p を<></>　か div で囲む
   - <></>は React.Fragment の省略形
   - 親要素から Headline の呼び出し
 
@@ -76,7 +77,7 @@ Get started by editing{" "}
 ---
 
 ### リファクタリング
-
+> Headlineの
 - title と page の"about"がかぶっているので page 一つにまとめる
   - h1 className={styles.title}>{props.title}</h1> を
     　- h1 className={styles.title}>{props.page}Page</h1>とする
@@ -92,5 +93,5 @@ Get started by editing{" "}
  - title="Index page", title="About page"
 ---
 ### GitHub への push
-- Headline部分をコンポーネント化
+- ♻️ Headline部分をコンポーネント化
 - Vercel へのデプロイ
