--- a/#7.md
+++ b/#7.md
@@ -24,10 +24,16 @@
 export function Links() {
   return (
     <div className={classes.grid}>
-      {ITEMS.map((item) => {
+      {ITEMS.map(item => {
 
       })}
 ```
+> itemの中に
+> (parameter) item: {
+    href: string;
+    title: string;
+    description: string;
+> が入っている
 * itemでコンポーネントを受け取る
 * itemのアロー関数内でreturn()を忘れないこと
 ```js
@@ -50,6 +56,7 @@ return (
   * →
   * unicode (\u2192)
 ---
-コミット
-コミット名
+> コミット
+- コミット名　⬆️ React.ReactDOM,Next.jsのアップグレード
+- コミット名　♻️ Linksのリファクタリング
 
