--- a/#8.md
+++ b/#8.md
@@ -45,7 +45,7 @@ import { Footer } from "../components/Footer";
   * コマンド + カンマ
   * 設定の追加、(ワークスペース)
   * "jsonを開く"をクリック(settinds.json)
-  * importで検索
+  * aveScript > preferrece : で検索
   * Import Module Specifierの定義をshortestからnon-relativeに変更
 
 setting.jsonフォルダが
@@ -76,7 +76,8 @@ setting.jsonフォルダが
   ```の部分を削除
 * _app.jsxで＜div＞＜/div＞を使っているがreact フラグメント<></>に変更
 ---
-コミット
+> コミット
+- 🏗️ 拡張し、ディレクトリ構成、インポート方法の変更、_appを用いた処理共通化
 
 
 
