--- a/#9 .md
+++ b/#9 .md
@@ -88,7 +88,7 @@
   - onClick に handleClick を渡して挙動確認
 
 ```js
-const handleOnclick(e)=>{
+const handleOnclick=(e)=>{
   console.log(e.target.href);
   e.preventDefault();
 }
@@ -129,3 +129,6 @@ alert(foo);
 - コンポーネントの中に書く
 - コンポーネントの外に書く
 > の３つあるが、メソッドが複雑でない場合は、外に書いてもいいが、中に書く場合は、useCallbackを用いて、再レンダリングされない様にする。
+---
+> コミット
+- ⚗️ 不要な記述でいつか消しますが試しに書いてみました
