--- a/#10.md
+++ b/#10.md
@@ -28,6 +28,7 @@ useEffect(() => {
 },[]);
 ```
   - useEffect の中を関数で記述(アロー関数)
+  - - useEffectを使用するとマウント時とアンマウント時の処理を書くことができる。
   - useEffect の中で背景色を"lightblue"に変える
 ```js
 useEffect(() => {
@@ -62,4 +63,4 @@ useEffect(() => {
 
 ---
 コミット
-- 説明用のuseEffectを導入
+- ✨ 講座用のuseEffectを導入
