--- a/#11.md
+++ b/#11.md
@@ -41,8 +41,16 @@ const handleClick = (e) =>  {
   - これでボタンスイッチの上に１が表示される
 - const foo の const を let に変更
 - handleClick 関数内に
-- Foo = foo + 1 ;
+- foo = foo + 1 ;
   を記述し、log(foo)で確認するとカウントアップされている。
+```js
+let foo = 1;
+	const handleClick=(e)=>  {
+		foo = foo + 1;
+		console.log(foo);
+	};
+ ```
+> 確認できる 
 
 ### state の実装
 
@@ -71,6 +79,15 @@ const setFoo=array[1]
 
 - handleClick 関数内に
   setFoo (foo + 1)
+```js
+const [foo, setFoo] = useState(1);
+	// let foo = 1;
+	const handleClick=(e)=>  {
+		// foo = foo + 1;
+		setFoo (foo + 1);
+		console.log(foo);
+	};
+```
 
 #### 正しい書き方に変更
 
@@ -108,5 +125,5 @@ setFoo(foo => foo + 1);
 
 ---
 
-コミット
-カウンターを設置して useState でカウントアップする
+> コミット
+- ✨ カウンターを設置して useState でカウントアップする
