--- a/#12.md
+++ b/#12.md
@@ -1,6 +1,9 @@
 # #12
-## useState,useEffectの第２引数の配列について
-### useEffectの挙動の確認
+
+## useState,useEffect の第２引数の配列について
+
+### useEffect の挙動の確認
+
 ```
 useEffect(() => {
 document.body.style.backgroundColor = 'lightblue';
@@ -9,72 +12,87 @@ document.body.style.backgroundColor = '';
 }
 },[]);
 ```
-useEffectの下に
+
+useEffect の下に
 console.log("foo")
 と入れて挙動を確認
-次に空配列[]の中にcountを入れて挙動を確認、countを入れるとfooが増えているのが確認できる
-```js
-useEffect(() => {
-    console.log("foo");
-    document.body.style.backgroundColor = "lightblue";
-    return () => {
-      document.body.style.backgroundColor = "#FFF0F5";
-    };
-  }, [count]);
- ```
--  countを入れた際の呼び出し順序は、return 部分(アンマウント時)が先に前回のマウント時の処理が実行され、その後(マウント時)が新たに呼び出される
-```js
-useEffect(() => {
-    console.log(`マウント時:${count}`);
-    document.body.style.backgroundColor = "lightblue";
-    return () => {
-      console.log(`アンマウント時:${count}`);
-      document.body.style.backgroundColor = "";
-    };
-  }, [count]);
-```
-- で確認する
-> useEffectのから配列に変数が入った場合、変数が変更されるたびにuseEffect内の関数が実行される。
+次に空配列[]の中に count を入れて挙動を確認、count を入れると foo が増えているのが確認できる
 
+```js
+useEffect(() => {
+	console.log("foo");
+	document.body.style.backgroundColor = "lightblue";
+	return () => {
+		document.body.style.backgroundColor = "#FFF0F5";
+	};
+}, [count]);
+```
+
+- count を入れた際の呼び出し順序は、return 部分(アンマウント時)が先に前回のマウント時の処理が実行され、その後(マウント時)が新たに呼び出される
+
+```js
+useEffect(() => {
+	console.log(`マウント時:${count}`);
+	document.body.style.backgroundColor = "lightblue";
+	return () => {
+		console.log(`アンマウント時:${count}`);
+		document.body.style.backgroundColor = "";
+	};
+}, [count]);
+```
+
+- で確認する
+  > useEffect のから配列に変数が入った場合、変数が変更されるたびに useEffect 内の関数が実行される。
 
 ### useCallback
+
 ```
 const handleClick = (e) =>  {
-setCount(count => count + 1);
-setCount(count => count + 1);
+		  setCount ((count) => count + 1);
+		  setCount ((count) => count + 1);
 };
 ```
+
 - これを
+
 ```
 const handleClick = useCallback((e) =>  {
-  setCount(count => count + 1);
+  setCount ((count) => count + 1);
 },[]);
 ```
-に変更し、if文を追加
+
+に変更し、if 文を追加
 
 ```js
 const handleClick = useCallback((e) =>  {
   if (count < 10) {
-setCount(count => count + 1);
+setCount ((count) => count + 1);
   }
 },[];
 ```
-  しても、10を過ぎても止まらずcountはupしていく。
-- useCallbackの第２に引数にcountを入れるとcountUpは10で止まる。
+
+しても、10 を過ぎても止まらず count は up していく。
+
+- useCallback の第２に引数に count を入れると countUp は 10 で止まる。
+
 ```js
 const handleClick = useCallback((e) =>  {
   if (count < 10) {
-setCount(count => count + 1);
+setCount((count) => count + 1);
   }
 },[count];
 ```
-> [count] の変数が更新される度にuseCallback関数内のメソッドが繰り返し再生成される。
-- countが10以上になると変数が更新されないのでカウントは１０で止まる。
-- - -
-#### GitHubへのpush
-- メッセージ
-  useEffectやuseCallbackの第2引数に関しての説明
-　
 
+> [count] の変数が更新される度に useCallback 関数内のメソッドが繰り返し再生成される。
+
+- count が 10 以上になると変数が更新されないのでカウントは１０で止まる。
+- - []ここが空配列のままだと10で止まらず、いつまでもカウントされる
+
+---
+
+#### GitHub への push
+
+>  コミット
+-   ⚡️useEffect や useCallback の第 2 引数に関しての説明
 
 
