--- a/#13.md
+++ b/#13.md
@@ -31,6 +31,7 @@ const [count, setCount] = useState(1);
 />
 ```
 - log で text を console に表示
+- - logはreturn の上に記述
 - setText を用いて文字の制御
   - text の length が 5 文字以上なら return して何もしない記述
 
@@ -71,7 +72,7 @@ const handleChange=useCallback((e) {
 - handleChange の中で色々な条件分岐ができる
 - - 5 文字以上になればアラート"5 文字以内にして下さい"を出す
 
-```
+```js
 if (e.target.value.length>5){
   alert("5文字以内にしてください");
   return;
@@ -80,10 +81,12 @@ if (e.target.value.length>5){
 
 - トリミング処理
   空白を取り除く処理
+- setText(e.target.value);の部分を
 
-```
+```js
 setText(e.target.value.trim())
 ```
+> に変更する
 
 - - 記号とか大文字を打たせない制御などができる
 
@@ -184,4 +187,4 @@ const handleDisplay =useCallback(()=> {
 
 ### コミット
 
-- useState で文字列を真偽値について解説
+- ✨ useState で文字列を真偽値について解説
