--- a/#16.md
+++ b/#16.md
@@ -5,40 +5,23 @@
 ### コンポーネント間で値の共通化
 
 #### next.js での pages 内で共通化するには next.js の特殊な記法がある
+#### page間の状態の共通化
+> _app.jsxはpageの親みたなもの
 
-- \_app.jsx が必要
+- _app.jsxde
 
-```
-<Component {...pageProps} />
-```
-
-この Component に各ページのコンポーネントが入ってくる
-
-- index.page であれば
-
-```
-export default function Home() {
-```
-
-の部分の Home が入ってくるので
-
-```
+```js
 <Component {...pageProps} foo={123}/>
 ```
-
-として index.page で
-
+> として、pages/index.jsxとabout.jsxで
+```js
+export default function Home(props) {
+	console.log(props);
 ```
-Home(props)
-```
+> を確認すると{foo: 123}となっているのが確認できる
+> _app.jsxにpropsとして渡したものは各pageにpropsとしてわたる。
 
-とすれば `foo=(123)`を受け取ることができるし about.page でも受け取ることができる(logで確認)　
-```
-console.log(props);
-```
-aboutでも同じことができる
-
-- これを利用して `pages` 内で値を共通化する
+- これを利用して 各`pages` 内で値を共通化する
 `_app.page` の
 
 ```
@@ -53,16 +36,14 @@ const { count, isShow, handleClick, handleDisplay } = useCounter();
   useBgLightBlue();
 ```
 
-をカット&ペーストして
-
+> をカットして、_app.jsxの function MyApp({ Component, pageProps }) {の下にペースト
+- 次もインポート
 ```js
 import { useBgLightBlue } from "src/hooks/useBgLightBlue";
 import { useCounter } from "src/hooks/useCounter";
 import { useInputArray } from "src/hooks/useInputArray";
 ```
-
-*インポート*する
-
+> propsで渡しやすくするために
 - const { count, isShow, handleClick, handleDisplay } = useCounter();の部分を一つのオブジェクトにまとめる
 
 ```
@@ -88,22 +69,35 @@ export default function About(props) {
   const { text, array, handleChange, handleAdd } = useInputArray();
 ```
 
-の部分を
+> propsで渡ってきたものを改めて分割代入すると
 
 ```js
-export default function About({
-  count,
-  isShow,
-  handleClick,
-  handleDisplay,
-  text,
-  array,
-  handleChange,
-  handleAdd,
-}) {
+export default function About(props) {
+	const {
+		count,
+		isShow,
+		handleClick,
+		handleDisplay,
+		text,
+		array,
+		handleChange,
+		handleAdd,
+	} = props;
 ```
-
-として ***props*** でわたって来たものを分割代入する(関数の引数レベルでの方法)
+> このような記述になるが、関数の引数レベルで分割代入すると
+```js
+export default function About({
+		count,
+		isShow,
+		handleClick,
+		handleDisplay,
+		text,
+		array,
+		handleChange,
+		handleAdd,
+	}){
+```
+> となる。
 
 - index.page では関数での分割代入の方法でやってみる
 
@@ -125,7 +119,7 @@ export default function Home(props) {
 
 一旦ここでコミット
 
-  >ページ間の State のリフトアップについて勉強
+  > ✨ページ間の State のリフトアップについて勉強
 
 ---
 
@@ -136,6 +130,7 @@ export default function Home(props) {
 - Links.jsx の ITEMS を Links の State にいれる
 
 ```js
+export function Links() {
 const [items,setItems]=useState(ITEMS);
 ```
 
@@ -149,8 +144,8 @@ const [items,setItems]=useState(ITEMS);
 import { useState } from "react";
 ```
 インポートして
-setItems 　に処理を入れてみる
-{items.map((item) => {　の前に
+setItems に処理を入れてみる
+{items.map((item) => { の前に
 
 ```js
 <button onClick={handleReduce}>減らす</button>
@@ -191,14 +186,14 @@ const handleReduce=useCallback(()=>{
 },[]);
 ```
 
-として `Links` の
+> として `Links` の
 
 ```
 import { useCallback, useState } from "react";
 ```
 
-も親の `Main` に移す
-`ITEMS` も親に移す
+> も親の `Main` に移す
+- `ITEMS` も親に移す
 
 ```js
 const ITEMS = [
@@ -226,7 +221,8 @@ const ITEMS = [
   },
 ];
 ```
-
+- Links.jsxにitemsを渡す
+- - export function Links(items) {
 - Links に items と handleReduce を渡して
 
 ```
@@ -264,16 +260,16 @@ export function Links({items,handleReduce}) {
       </p>
 ```
 の部分を
-```
+```js
 <p className={classes.description}>
   アイテムの数は{props.children}個です
 </p>
 ```
 に変更して、その次に
-```
+```js
 <button onClick={props.handleReduce}>減らす</button>
 ```
-Mainの <Headline page={props.page}>の部分を
+> Mainの <Headline page={props.page}>の部分を
 ```js
 <Headline page={props.page} handleReduce={handleReduce}>
 ```
@@ -283,7 +279,7 @@ Mainの <Headline page={props.page}>の部分を
   - Linksで二箇所、Mainで一箇所削除する
 ---
 ### コミット
->  コンポーネント間のStateのリフトアップについて勉強
+>  ✨ コンポーネント間のStateのリフトアップについて勉強
 
 
 
