--- a/#19 ローディング、エラー処理.md
+++ b/#19 ローディング、エラー処理.md
@@ -1,7 +1,7 @@
 ## 非同期処理で必要になるローディングとエラーの処理
 
 - 外部パッケージを使わず、基本形で記述してみる
-- ローディング用の useState を用意して、getPosts();の中で setLoading して、そこで状態を変えていく
+- ローディング用とエラー用の useState を用意して、getPosts();の中で setLoading して、そこで状態を変えていく
 - return 文の中で、ローディングとエラーの際の表示させる
 
 ### まずは、ローディングから
