--- a/#22ファイルシステムルーティング.md
+++ b/#22ファイルシステムルーティング.md
@@ -10,6 +10,7 @@
 - さらにNested Routesとは
   - localhost:3000/ の"/"の後に"/"スラーで深く下の階層に入っていくこと
 > pagesの中にaboutディレクトリを作成し、その中に、about.jsxを移動させて、それを表示させるには
+- import classes from "src/styles/Home.module.css";として
 - localhost:3000/about/aboutとすると背景色はないが表示されている
 > このabout.jsxをindex.jsxに変更すると、localhost:3000/about/indexとする必要はなく
  * localhost:3000/aboutのみで背景色ごと表示できる。
@@ -38,7 +39,7 @@ return (
     <ol>
       {data.map((post) => {
         return (<li key={post.id}>
-          <Link href="/posts/1">
+          <Link href="/post/1">
           <a>{post.title}</a>
           </Link>
         </li>;
@@ -48,6 +49,7 @@ return (
   );
   ```
 > とすると、posts.IDをクリックすると、"/posts/1"にページ遷移できる。
+- エラーが出ているので、URL(http://localhost:3000/post/1)で確認
 > ただ、このままでは、どのIDをクリックしてもposts/1に遷移するので、各番号に対応して、遷移するように設定
 ```js
 return (
@@ -103,4 +105,4 @@ return (
 ---
 コミット
 プッシュ
-"ファイルシステムルーティングを試しました"
+"🚚 ファイルシステムルーティングを試しました"
