--- a/#23動的ページでの非同期処理.md
+++ b/#23動的ページでの非同期処理.md
@@ -2,7 +2,7 @@
 
 - 今回は、子ページでも fetch を行いページを表示させる
 - - posts の API を叩いて、使われていない body を使用して表示させる
-- post/[id]/index.jsx ページ
+- post/[id]/index.jsx ページ,
 - const router = useRouter();の次に
 - const {data, error} = useSWR("");を記述
 - ("")の中に
@@ -43,8 +43,9 @@ const { data, error } = useSWR("https://jsonplaceholder.typicode.com/posts/1");
 <title>{data.title}</title>
 ```
 
-> に変更して、保存して確認すると、title と body が表示されている
-
+> に変更して、保存して確認すると、title と body が表示されているが2回目以降はエラーとなる
+> 2回目以降は、undefinedとなっているためでこれを解消するためオプショナルチェイニングを使う
+- https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Operators/Optional_chaining(参照)
 ```js
 <Head>
   <title>{data?.title}</title>
@@ -65,7 +66,7 @@ const { data, error } = useSWR("https://jsonplaceholder.typicode.com/posts/1");
 ("https://jsonplaceholder.typicode.com/posts/1");
 ```
 
-> の部分をバッククォ–トを用いる
+> の部分をバッククォ–トを用いて書き換える
 
 ```js
 const { data, error } = useSWR(
@@ -112,7 +113,7 @@ const { data, error } = useSWR(
 );
 ```
 
-> をコピぺして、一旦ペーストした部分をコメントアウトする。
+> をすぐ下にコピぺして、一旦ペーストした部分をコメントアウトする。
 > {data, error}が被るので名前を変える
 
 - 名前は、const {data: post, error} = useSWR()とする
@@ -147,7 +148,7 @@ error: postError;
 ```js
 const {data: user, error: userError} = useSWR(
   post?.userId
- ?`https://jsonplaceholder.typicode.com/users/${post?.userId`
+ ?`https://jsonplaceholder.typicode.com/users/${post?.userId}`
 : null);
 ```
 
@@ -186,13 +187,11 @@ const {data: user, error: userError} = useSWR(
 
 > この辺りの記述も少し冗長なので、使いまわしやすくするために前回と同じように、usePost.jsx を作って、post のデータを一気にまとめて使える様にする。
 
-- hooks フォルダに usePost.jsx を作成
+- hooks フォルダに usePost.jsx を作成して、post/[id]/index.jsx
+- から下の部分をコピして、usePost.jsxに貼り付け
 - その中を
 
 ```js
-import { useRouter } from "next/router";
-import useSWR from "swr";
-
 export const usePost = () => {
   const router = useRouter();
   const { data: post, error: postError } = useSWR(
@@ -205,6 +204,9 @@ export const usePost = () => {
       ? `https://jsonplaceholder.typicode.com/users/${post.userId}`
       : null
   );
+  ```
+  > の下に
+  ```js
   return {
     post,
     user,
@@ -212,8 +214,10 @@ export const usePost = () => {
     userError,
   };
 };
+
 ```
 
+> を記述する。
 > として,切り取った const router = useRouter();部分に
 
 ```js
@@ -226,7 +230,7 @@ const { post, user, postError, userError } = usePost();
 console.log(post, user, postError, userError);
 ```
 
-> とする
+> して、コメントアウト部分を削除
 
 ---
 
@@ -276,7 +280,7 @@ return {
   post,
   user,
   error: postError || userError,
-  isLading: !post && !postError && !user && !userError,
+  isLoading: !post && !postError && !user && !userError,
 };
 ```
 
@@ -350,13 +354,13 @@ export const Post = () => {
 
 > post/[id]/index.jsx 内の書き換え
 
+
 ```js
-import { usePost } from "src/hooks/usePost";
-const { post, user, error, isLoading } = usePost();
+const { data, error, isLoading, isEmpty } = usePost();
 ```
-
-> の削除
-
+> の部分と
+> logの部分（console.log({ post, user, error, isLoading });）は削除
+- [id]/indexの
 ```js
 <div>
   <h1>{post?.title}</h1>
@@ -365,7 +369,7 @@ const { post, user, error, isLoading } = usePost();
 </div>
 ```
 
-> を切り取って post/[id]/index.jsx の
+> を切り取って post/index.jsx の
 
 ```js
 <ol>
@@ -381,6 +385,12 @@ const { post, user, error, isLoading } = usePost();
 </ol>
 ```
 > を削除した後に貼り付ける
+```js
+if (isEmpty) {
+		return <div>データは空です</div>;
+	}
+  ```
+  > この部分も使っていないので削除
 
 
 - Postファイルのindex.jsxに貼り付け
@@ -397,7 +407,7 @@ return (
   );
 ```
 
-> isEmpty,Link を使ってないので削除
+> 
 
 ```js
 import Link from "next/link";
@@ -433,7 +443,8 @@ if (isEmpty) {
 
 ---
 
-#### Error 部分の設定
+#### Error 部分の設定　　　
+
 
 > hooks/usePosts.jsx から
 
@@ -449,7 +460,7 @@ const fetcher = async (url) => {
 };
 ```
 
-> を切り取りして、hooks/usePost.jsx にペースト
+> を切り取りして、hooks/usePost.jsx のimportの下にペースト
 
 - fetcher は、useSWR()の第二引数に入れる
 
@@ -519,7 +530,7 @@ const fetcher = async (url) => {
 };
 ```
 
-> の部分を切り取り、fetcher.js にペースト
+> の部分を切り取り、fetcher.js にペーストして、fetcherをexportする。
 
 - usePost.jsx の
 
@@ -543,9 +554,9 @@ import { fetcher } from "src/utils/fetcher";
 
 > をインポート
 
-- usePosts.jsx も同様にする
+- usePosts.jsx も同様に削除してfetcherをimportする
 
 ---
 
 - GitHub にプシュし、Vercel にデプロイ
-- ユーザーの fetch,fetcher の共通化
+- ✨ ユーザーの fetch,fetcher の共通化
