--- a/#24リファクタリング.md
+++ b/#24リファクタリング.md
@@ -7,9 +7,11 @@
   - そのままでは、エラーが出るので、Headerのindex.jsxを変更
 > {href: "/", label: "Index"},を{href: "/posts", label: "Index"},とする
 - ラベルも{href: "/posts", label: "Posts"},として、IndexからPostsに変更
-> このままでは、子ページがpostのままなのでエラーが出るので、componentsのposts/index.jsxの
-- ＜Posts/＞をコマンド、クリックでその子ページに移動し、
+> このままでは、子ページがpostのままなのでエラーが出るので、pages/posts/indexの 
+- ＜Posts/＞をコマンド、クリックでその子ページに移動し
+- componentsのposts/index.jsxの
   - ＜Link href={`/posts/${post.id}`}＞に変更する
+- url をhttp://localhost:3000/postsと入力する
 ---
 > 一旦コミット
 - 🚚 投稿系はパスを変更した
@@ -45,7 +47,7 @@ export default About;
 ```
 ---
 > コミット
-- indexから不要なコードを削除
+- 🔥 indexから不要なコードを削除
 ---
 #### 不要なものの削除
 - 背景色の削除
@@ -65,6 +67,8 @@ import { useBgColor } from "src/hooks/useBgColor";
 - useInputArray.jsx
 > 不要なコンポーネントも削除
 - Main,Links,Headline,Footer
+- - と、それらに関連するコードの削除
+- - エラーとして表示されるので、それを参考に削除していく
 ---
 > コミット
 - 🔥不必要なファイルやコードを削除
@@ -86,7 +90,7 @@ import { Posts as PostsComponent} from "src/components/Posts"
 <PostsComponent/>
 ```
 > にそれぞれ変更する
-- titleも＜title>Posts page</title＞に変更
+- titleも＜title>Posts page＜/title＞に変更
 > [id]/index.jsxの"const PostId = () => {"と"export default PostId;"を
 - ”const PostsId = () => {”
 - "export default PostsId;"
@@ -96,6 +100,7 @@ import { Posts as PostsComponent} from "src/components/Posts"
 - 🚚 投稿系ページの名前変更
 ---
 #### pagesのリファクタリング
+> componentsの中にLayoutフォルダを作る
 > Layoutの中にindex.jsxを作り、その中に
 - pages/index.jsxの
 ```js
@@ -169,7 +174,7 @@ export const Layout = (props) => {
   {href: "/users", label: "Users"},
   {href: "/comments", label: "Comments"},
 ```
-> として、Users,Commentsの一覧を取得して、表示させる。
+> として、Usersのname,Commentsのbodyを一覧取得して、表示させる。
 ---
 > Header/index.jsxはコミットさせず、一旦退避させる。stashという。
 > ...をクリックして、一時退避を選んでクリック、名前はつけなくても良い
