--- a/#25.md
+++ b/#25.md
@@ -12,7 +12,7 @@
 
 ```js
 const useUsers = () => {
-  const { data, error } = useSWR("https://jsonplaceholder.typicode.com/users");
+	const { data, error } = useSWR("https://jsonplaceholder.typicode.com/users");
 };
 ```
 
@@ -20,10 +20,10 @@ const useUsers = () => {
 
 ```js
 return {
-  data,
-  error,
-  isLoading: !data && !error,
-  isEmpty: data && data.length === 0,
+	data,
+	error,
+	isLoading: !data && !error,
+	isEmpty: data && data.length === 0,
 };
 ```
 
@@ -34,13 +34,13 @@ return {
 
 ```js
 if (isLoading) {
-  return <div>ローディング中</div>;
+	return <div>ローディング中</div>;
 }
 if (error) {
-  return <div>{error.message}</div>;
+	return <div>{error.message}</div>;
 }
 if (isEmpty) {
-  return <div>データは空です</div>;
+	return <div>データは空です</div>;
 }
 ```
 
@@ -50,16 +50,483 @@ if (isEmpty) {
 
 ```js
 <div>
-  {data.map((user) => {
-    return (
-      <div key={user.id}>
-        <h2>{user.name}</h2>
-        <a>{user.email}</a>
-      </div>
-    );
-  })}
+	{data.map((user) => {
+		return (
+			<div key={user.id}>
+				<h2>{user.name}</h2>
+				<a>{user.email}</a>
+			</div>
+		);
+	})}
 </div>
 ```
-> を記述すればnameとemailが表示される
-> 最初のdivをolに、次のdivをliに変更
-- 子ページにリンクを作る
+
+> を記述すれば name と email が表示される
+> 最初の div を ol に、次の div を li に変更
+
+```js
+<ol>
+	{data.map((user) => {
+		return (
+			<li key={user.id}>
+				<h2>{user.name}</h2>
+				<a>{user.email}</a>
+			</li>
+		);
+	})}
+</ol>
+```
+
+- 子ページへのリンクを作る
+  > li タグの中を
+
+```js
+<li key={user.id}>
+	<Link href={`/users/${user.id}`}>
+		<a>{`${user.name} (${user.email})`}</a>
+	</Link>
+</li>
+```
+
+> と書き換える
+
+```js
+<ol>
+	{data.map((user) => {
+		return (
+			<li key={user.id}>
+				<Link href={`/users/${user.id}`}>
+					<a>{`${user.name}(${user.email})`}</a>
+				</Link>
+			</li>
+		);
+	})}
+</ol>
+```
+
+> とする
+> このままで更新すると、一瞬ローディングの文字が、上部に出たり、Index,Posts などのクリックボタンが一瞬消えたりするのでこれを解消する。
+
+- const Users の上に
+
+```js
+const UserComponent = () => {
+	const { data, error, isLoading, isEmpty } = useUsers();
+	if (isLoading) {
+		return <p>ローディング中</p>;
+	}
+	if (error) {
+		return <p>{error.message}</p>;
+	}
+	if (isEmpty) {
+		return <p>データは空です</p>;
+	}
+
+	<ol>
+		{data.map((user) => {
+			return (
+				<li key={user.id}>
+					<Link href={`/users/${user.id}`}>
+						<a>{`${user.name}(${user.email})`}</a>
+					</Link>
+				</li>
+			);
+		})}
+	</ol>;
+};
+```
+
+> として、
+
+- const User の部分を
+
+```js
+const { data, error, isLoading, isEmpty } = useUsers();
+console.log(data);
+if (isLoading) {
+	return <div>ローディング中</div>;
+}
+if (error) {
+	return <div>{error.message}</div>;
+}
+if (isEmpty) {
+	return <div>データは空です</div>;
+}
+```
+
+> と
+
+```js
+<ol>
+	{data.map((user) => {
+		return (
+			<li key={user.id}>
+				<Link href={`/users/${user.id}`}>
+					<a>{`${user.name}(${user.email})`}</a>
+				</Link>
+			</li>
+		);
+	})}
+</ol>
+```
+
+> の部分を削除して
+
+```js
+<UserComponent />
+```
+
+> を記述すると、解決されている。
+
+---
+
+> 次は、Users の詳細ページの作成
+
+- users/[id]/user.jsx の Posts を div タグの user に変更
+  > Users に表示されている 10 個のユーザーの一つをクリックすると user が表示される
+- このユーザーの代わりに各ユーザーの詳細が表示されるようにする。
+  > users/index.jsx から
+
+```js
+const useUsers = () => {
+	const { data, error } = useSWR("https://jsonplaceholder.typicode.com/users");
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+	};
+};
+```
+
+> の部分をコピーして useUser にして貼り付け,useSWR の import
+
+- ("https://jsonplaceholder.typicode.com/users")の部分を動的に取得するよう取得できるようにして
+
+```js
+const useUser = () => {
+	const router = useRouter();
+	const { data, error } = useSWR(router.query.id ? `https://jsonplaceholder.typicode.com/users/${router.query.id}`: null);
+
+```
+
+> として、名前を取得するには、
+
+```js
+const PostsId = () => {
+	const { data, error, isLoading } = useUser();
+	return (
+		<div>
+			<Header />
+			{isLoading ? (
+				<div>ローディング中</div>
+			) : error ? (
+				<div>{error.message}</div>
+			) : (
+				<div>{data.name}</div>
+			)}
+		</div>
+	);
+};
+```
+
+> とする。
+> 名前以外も表示させる
+
+```js
+<div>{data.name}</div>
+```
+
+> の部分を
+
+```js
+<div>
+	<h1>{data.name}</h1>
+	<ul>
+		<li>{data.email}</li>
+		<li>{data.email}</li>
+		<li>{data.username}</li>
+		<li>{data.address.city}</li>
+		<li>{data.phone}</li>
+		<li>{data.website}</li>
+		<li>{data.company.name}</li>
+	</ul>
+</div>
+```
+
+> とする。
+
+---
+
+> コンポーネント化する
+
+- PostsId を UsersId に変更(2 箇所)
+- const UsersId = () => {の上に
+
+```js
+const UserComponent = () => {
+	const { data, error, isLoading } = useUser();
+	if (isLoading) {
+		return <p>ローディング中</p>;
+	}
+	if (error) {
+		return <p>{error.message}</p>;
+	}
+	if (isEmpty) {
+		return <p>データは空です</p>;
+	}
+	return (
+		<div>
+			<h1>{data.name}</h1>
+			<ul>
+				<li>{data.email}</li>
+				<li>{data.email}</li>
+				<li>{data.username}</li>
+				<li>{data.address.city}</li>
+				<li>{data.phone}</li>
+				<li>{data.website}</li>
+				<li>{data.company.name}</li>
+			</ul>
+		</div>
+	);
+};
+```
+
+> として、UsesId の部分は
+
+```js
+const UsersId = () => {
+	return (
+		<div>
+			<Header />
+			<UserComponent />
+		</div>
+	);
+};
+```
+
+> とする
+
+---
+
+> Comments の body の取得
+
+- users フォルダをコピーして、comments フォルダを作成
+  > 記述は、そのまま利用して、一部　 comments に変更
+
+```js
+import Head from "next/head";
+import Link from "next/link";
+import { Header } from "src/components/Header";
+import useSWR from "swr";
+
+const useComments = () => {
+	const { data, error } = useSWR(
+		"https://jsonplaceholder.typicode.com/comments"
+	);
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+		isEmpty: data && data.length === 0,
+	};
+};
+
+const CommentsComponent = () => {
+	const { data, error, isLoading, isEmpty } = useComments();
+	if (isLoading) {
+		return <p>ローディング中</p>;
+	}
+	if (error) {
+		return <p>{error.message}</p>;
+	}
+	if (isEmpty) {
+		return <p>データは空です</p>;
+	}
+	return (
+		<ol>
+			{data.map((comment) => {
+				return (
+					<li key={comment.id}>
+						<Link href={`/comments/${comment.id}`}>
+							<a>{comment.body}</a>
+						</Link>
+					</li>
+				);
+			})}
+		</ol>
+	);
+};
+
+const Users = () => {
+	return (
+		<div>
+			<Head>
+				<title>Users Page</title>
+			</Head>
+			<Header />
+			<CommentsComponent />
+		</div>
+	);
+};
+export default Users;
+```
+
+> とすると comments が 500 件取得できている
+
+---
+
+> 子ページの作成
+
+- users/[id]/index.jsx の user、users を
+- それぞれ Comments,Comment に変更
+  > 表示部分は、
+
+```js
+<h1>{data.body}</h1>
+	<ul>
+		<li>{data.name}</li>
+		<li>{data.email}</li>
+	</ul>
+```
+> とする
+---
+> usersとcommentsをそれぞれコンポーネントとフックスに分ける
+- hooksフォルダにuseUsers.jsxを作る
+- - users/index.jsxから
+```js
+const useUsers = () => {
+	const { data, error } = useSWR("https://jsonplaceholder.typicode.com/users");
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+		isEmpty: data && data.length === 0,
+	};
+};
+```
+> の部分を切り取り、useUsers.jsxに貼り付け
+```js
+import useSWR from "swr";
+
+export const useUsers = () => {
+	const { data, error } = useSWR("https://jsonplaceholder.typicode.com/users");
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+		isEmpty: data && data.length === 0,
+	};
+};
+```
+> として、users/index.jsxに{useUsers}をインポートする
+---
+- usersComponentの部分をコンポーネント化する
+> componentsフォルダにUsers/index.jsxを作る
+- pages/users/index.jsxから
+```js
+const UsersComponent = () => {
+	const { data, error, isLoading, isEmpty } = useUsers();
+	if (isLoading) {
+		return <p>ローディング中</p>;
+	}
+	if (error) {
+		return <p>{error.message}</p>;
+	}
+	if (isEmpty) {
+		return <p>データは空です</p>;
+	}
+	return (
+		<ol>
+			{data.map((user) => {
+				return (
+					<li key={user.id}>
+						<Link href={`/users/${user.id}`}>
+							<a>{`${user.name}(${user.email})`}</a>
+						</Link>
+					</li>
+				);
+			})}
+		</ol>
+	);
+};
+```
+>  部分を切り取り、components/Users/index.jsxに貼り付ける
+- exportして、LinkとuseUsersをインポートする。
+- pages/users/index.jsxは
+```js
+import Head from "next/head";
+import { Header } from "src/components/Header";
+import { UsersComponent } from "src/components/Users";
+
+const Users = () => {
+	return (
+		<div>
+			<Head>
+				<title>Users Page</title>
+			</Head>
+			<Header />
+			<UsersComponent />
+		
+		</div>
+	);
+};
+export default Users;
+```
+> とする。
+---
+> hooksにuseUser.indexを作る
+- pages/users/[id]/index.jsxから
+```js
+const useUser = () => {
+	const router = useRouter();
+	const { data, error } = useSWR(
+		router.query.id
+			? `https://jsonplaceholder.typicode.com/users/${router.query.id}`
+			: null
+	);
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+		isEmpty: data && data.length === 0,
+	};
+};
+```
+> の部分を切り取り、貼り付けて、exportとimportを行う
+- 同じくpages/users/[id]/index.jsxから
+```js
+const UserComponent = () => {
+	const { data, error, isLoading } = useUser();
+	if (isLoading) {
+		return <p>ローディング中</p>;
+	}
+	if (error) {
+		return <p>{error.message}</p>;
+	}
+
+	return (
+		<div>
+			<h1>{data.name}</h1>
+			<ul>
+				<li>{data.email}</li>
+				<li>{data.email}</li>
+				<li>{data.username}</li>
+				<li>{data.address.city}</li>
+				<li>{data.phone}</li>
+				<li>{data.website}</li>
+				<li>{data.company.name}</li>
+			</ul>
+		</div>
+	);
+};
+```
+> の部分を切り取り、貼り付けて、exportとimportを行う
+---
+> Userと同じようにCommentもコンポーネント化
+> componentsフォルダにUser/index.jsxを作る
+- 後は、Usersと同じ要領
+---
+> CommentもUserと同じように子ページ化する
+---
+> コミット
+- ✨ UsersとCommentsのページも完成！
