--- a/#26.md
+++ b/#26.md
@@ -1,452 +1,385 @@
 ### 前回までのリファクタリング
-#### hooksフォルダのリファクタリング
 
-- hooksフォルダにuseFetchArray.jsxを作成
-- useComments.jsxをコピペ
+#### hooks フォルダのリファクタリング
+
+- hooks の usePosts,useUsers,useComments をまとめる
+- hooks フォルダに useFetchArray.jsx を作成
+- useComments.jsx をコピペ
 - - export const useComments = () =>を
 - - export const useFetchArray = () => に変更
+
 ```js
 export const useFetchArray = () => {
   const { data, error } = useSWR("https://jsonplaceholder.typicode.com/comments");
 ```
-> の部分の引数をurlにする
+
+> の部分を動的にするために引数を url にする
+
 ```js
 export const useFetchArray = (url) => {
   const { data, error } = useSWR(url);
 ```
-> useComments.jsxから
-```js
-export const useComments = () => {
-  const { data, error } = useSWR("https://jsonplaceholder.typicode.com/comments");
 
-  return {
-    data,
-    error,
-    isLoading: !error && !data,
-    isEmpty: data && data.length === 0,
-  };
-};
-```
-> の部分をコピーして、useFetchArray.jsxの下部にペースト,
-> その部分をreturn以下を削除して
+> この useFetchArray を元に新しく useComments を作り直して使う
+
+- useFetchArray の下部に
+
 ```js
 export const useComments = () => {
-  return useFetchArray("https://jsonplaceholder.typicode.com/comments");
+	const { data, error } = useSWR(
+		"https://jsonplaceholder.typicode.com/comments"
+	);
+	return {
+		data,
+		error,
+		isLoading: !error && !data,
+		isEmpty: data && data.length === 0,
+	};
 };
 ```
-> として、これを後二つコピーして、記述を
+
+> を貼り付けて、その貼り付けた部分の useSWR を useFetchArray に変更、return 以下を削除して
+
 ```js
 export const useComments = () => {
-  return useFetchArray("https://jsonplaceholder.typicode.com/comments");
+	return useFetchArray("https://jsonplaceholder.typicode.com/comments");
+};
+```
+
+> として、この部分を後二つコピーして、記述を
+
+```js
+export const useComments = () => {
+	return useFetchArray("https://jsonplaceholder.typicode.com/comments");
 };
 export const usePosts = () => {
-  return useFetchArray("https://jsonplaceholder.typicode.com/post");
+	return useFetchArray("https://jsonplaceholder.typicode.com/post");
 };
 export const useUsers = () => {
-  return useFetchArray("https://jsonplaceholder.typicode.com/Users");
+	return useFetchArray("https://jsonplaceholder.typicode.com/Users");
 };
 ```
+
 > として、これを使いたいコンポーネントで呼び出して使う
-- hooksのuseComments.jsxを削除.
-- - ブラウザのcommentsをクリックしてもエラーが出る。
-> Components/Comments/index.jsxの
+
+- hooks の useComments.jsx を削除.
+- - ブラウザの comments をクリックしてもエラーが出る。
+    > Components/Comments/index.jsx の
 - import { useComments } from "src/hooks/useComments";を削除
-- 再度、useCommentsをインポート
-> これで、commentsをクリックすると元通り表示されている
-- usePostsでも同じ様にする
-> usePostsを呼び出して使っているとことを"検索｀usePosts｀で検索して、調べて,Components/Posts/index,jsxから
+- 再度、useComments をインポート
+- import { useComments } from "src/hooks/useFetchArray"; がインポートされる
+  > これで、comments をクリックすると元通り表示されている
+- usePosts でも同じ様にする
+  > usePosts を呼び出して使っているとことを"検索｀ usePosts ｀で検索して、調べて,Components/Posts/index,jsx から
 - import { usePosts } from "src/hooks/usePosts";を削除
-  - 再度、usePostsをインポート
+  - 再度、usePosts をインポート
   - from "src/hooks/useFetchArray"に呼び出し元が変わっている
-> useUsersも同様にする
+    > useUsers も同様にする
 - もう少し上手にまとめてみる
 - ”https://jsonplaceholder.typicode.com/”　この部分は同じ記述なので一つにまとめる。
-> exportの上に
+  > export の上に
+
 ```js
 const API_URL = "https://jsonplaceholder.typicode.com";
 ```
-> と記述して、exportの部分を
+
+> と記述して、export の部分を
+
 ```js
 export const useComments = () => {
-  return useFetchArray(`${API_URL}/comments`);
+	return useFetchArray(`${API_URL}/comments`);
 };
 export const usePosts = () => {
-  return useFetchArray(`${API_URL}/posts`);
+	return useFetchArray(`${API_URL}/posts`);
 };
 export const useUsers = () => {
-  return useFetchArray(`${API_URL}/users`);
+	return useFetchArray(`${API_URL}/users`);
 };
 ```
+
 > と書き換えると共通化できる。
+
 ---
+
 > ここまでを一旦コミット
-- ♻️ 配列のデータのAPIの共通化
+
+- ♻️ 配列のデータの API の共通化
+
 ---
-#### postsの詳細ページの中にコメントを出せるようにする
-> https://jsonplaceholder.typicode.com/
-> のposts/1を確認
+
+#### posts の詳細ページの中にコメントを出せるようにする
+
+- json.Placeholder で
+  > https://jsonplaceholder.typicode.com/
+  > の posts/1 を確認
 - https://jsonplaceholder.typicode.com/comments?postsId=1
-- とすると、postsId:1に5つのcommentsが紐づいているのが確認できる
-- この5つの投稿を出していく
-> pages/posts/[id]/index.jsxのページの＜Posts/＞は
->Postコンポーネントに全てが書かれている。
-> このページでtitleや本文やuserを出しているがこの下にコメントを出していく。
-- useFetchArrayを使っていく
+- とすると、postsId:1 に 5 つの comments が紐づいているのが確認できる
+- この 5 つの投稿を出していく
+  > pages/posts/[id]/index.jsx のページの＜ Posts/＞は
+  > Post コンポーネントに全てが書かれている。
+  > このページで title や本文や user を出しているがこの下にコメントを出していく。
+- useFetchArray を使っていく
+
 ```js
 export const useUsers = () => {
-  return useFetchArray(`${API_URL}/users`);
+	return useFetchArray(`${API_URL}/users`);
 };
 ```
+
 > の下に
+
 ```js
 export const useCommentsByPostsId = (id) => {
- return useFetchArray(`${API_URL}/comments?postId=${id}`);
-}
+	return useFetchArray(`${API_URL}/comments?postId=${id}`);
+};
 ```
-> を記述して、useCommentsByPostsIdを呼び出す
-- Post/index.jsxに
+
+> を記述して、useCommentsByPostsId を呼び出す
+
+- Post/index.jsx の
+- const { data, error, isLoading, isEmpty } = usePosts();の下に
+
 ```js
-const {} = useCommentsByPostsId(post.id)
+const {} = useCommentsByPostsId(post.id);
 ```
-> として、useCommentsByPostsIdをインポートする
-- const {}の中には、データとして、useFetchArrayにある
+
+> として、useCommentsByPostsId をインポートする
+
+- const {}の中には、データとして、useFetchArray にある
 - {data, error, isLoading, isEmpty}を入れるがすぐ上にある
 - { post, user, error, isLoading }とかぶってエラーになるので
+
 ```js
 const {
-    data: Comments,
-    error: commentsError,
-    isLoading: isCommentsLoading,
-    isEmpty,
-  } = useCommentsByPostsId(post.id);
+	data: Comments,
+	error: commentsError,
+	isLoading: isCommentsLoading,
+	isEmpty,
+} = useCommentsByPostsId(post.id);
 ```
+
 > とする
+
 - 上の記述をコンポーネント化する
-> Commentsフォルダの下にCommentsByPostsId.jsxコンポーネントを作成してその中に
-- Post/index.jsxの中の
+  > components/Comments フォルダの下に CommentsByPostsId.jsx コンポーネントを作成してその中に
+- Post/index.jsx の中の
+
 ```js
 const {
-    data: Comments,
-    error: commentsError,
-    isLoading: isCommentsLoading,
-    isEmpty,
-  } = useCommentsByPostsId(post.id);
-
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
+	data: Comments,
+	error: commentsError,
+	isLoading: isCommentsLoading,
+	isEmpty,
+} = useCommentsByPostsId(post.id);
 ```
-> の部分を切り取って、貼り付け
-```js
-export const CommentsByPostId = () => {
-  const {
-    data: Comments,
-    error: commentsError,
-    isLoading: isCommentsLoading,
-    isEmpty,
-  } = useCommentsByPostsId(post.id);
 
+> を切り取って、貼り付ける
 
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-}
-
-```
-> とする
-* Comments
-* commentsError
-* isCommentsLoading
-> の名前の部分はいらなくなるので削除
-- Comments/index.jsxから
 ```js
 if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  if (isEmpty) {
-    return <div>データは空です</div>;
-  }
-
-  return (
-    <ol>
-      {data.map((comment) => {
-        return (
-          <li key={comment.id}>
-            <Link href={`/comments/${comment.id}`}>
-              <a>{`${comment.body} `}</a>
-            </Link>
-          </li>
-        );
-      })}
-    </ol>
-  );
+	return <div>ローディング中</div>;
+}
+if (error) {
+	return <div>{error.message}</div>;
+}
 ```
-> の部分を切り取り CommentsByPostId.jsxを
+
+> の部分はコピーして、貼り付け
+
+- Comments
+- commentsError
+- isCommentsLoading
+  > の名前の部分はいらなくなるので削除して
+
 ```js
 export const CommentsByPostId = () => {
-  const { data, error, isLoading, isEmpty } = useCommentsByPostsId(post.id);
+	const { data, error, isLoading, isEmpty } = useCommentsByPostsId(post.id);
 
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  if (isEmpty) {
-    return <div>データは空です</div>;
-  }
-
-  return (
-    <ol>
-      {data.map((comment) => {
-        return (
-          <li key={comment.id}>
-            <Link href={`/comments/${comment.id}`}>
-              <a>{`${comment.body} `}</a>
-            </Link>
-          </li>
-        );
-      })}
-    </ol>
-  );
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+	if (error) {
+		return <div>{error.message}</div>;
+	}
 };
-
 ```
-> としても上手くいかないので
-- Comments/Comments.jsx
+
+> とする
+
+- Comments/index.jsx から
+
+```js
+if (isEmpty) {
+	return <p>データは空です</p>;
+}
+return (
+	<ol>
+		{data.map((comment) => {
+			return (
+				<li key={comment.id}>
+					<Link href={`/comments/${comment.id}`}>
+						<a>{comment.body}</a>
+					</Link>
+				</li>
+			);
+		})}
+	</ol>
+);
+```
+
+> の部分をコピペする
+> CommentsByPostId.jsx を
+
+```js
+export const CommentsByPostId = () => {
+	const { data, error, isLoading, isEmpty } = useCommentsByPostsId(post.id);
+
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+
+	if (error) {
+		return <div>{error.message}</div>;
+	}
+
+	if (isEmpty) {
+		return <div>データは空です</div>;
+	}
+
+	return (
+		<ol>
+			{data.map((comment) => {
+				return (
+					<li key={comment.id}>
+						<Link href={`/comments/${comment.id}`}>
+							<a>{`${comment.body} `}</a>
+						</Link>
+					</li>
+				);
+			})}
+		</ol>
+	);
+};
+```
+
+> として props を記述して
+
 ```js
 import Link from "next/link";
 import { useCommentsByPostsId } from "src/hooks/useFetchArray";
 
 export const CommentsByPostId = (props) => {
-  const { data, error, isLoading, isEmpty } = useCommentsByPostsId(props.id);
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  if (isEmpty) {
-    return <div>データは空です</div>;
-  }
-
-  return (
-    <ol>
-      {data.map((comment) => {
-        return (
-          <li key={comment.id}>
-            <Link href={`/comments/${comment.id}`}>
-              <a>{`${comment.body} `}</a>
-            </Link>
-          </li>
-        );
-      })}
-    </ol>
-  );
-};
+	const { data, error, isLoading, isEmpty } = useCommentsByPostsId(props.id);
 ```
-- Comments/index.jsx
+
+> として
+
+- components/Post/index.jsx に
+
 ```js
-
-import Link from "next/link";
-import { useComments } from "src/hooks/useFetchArray";
-
-
-export const CommentsComponent = () => {
-  const { data, error, isLoading, isEmpty } = useComments();
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  if (isEmpty) {
-    return <div>データは空です</div>;
-  }
-
-  return (
-    <ol>
-      {data.map((comment) => {
-        return (
-          <li key={comment.id}>
-            <Link href={`/comments/${comment.id}`}>
-              <a>{`${comment.body} `}</a>
-            </Link>
-          </li>
-        );
-      })}
-    </ol>
-  );
-};
+<CommentsByPostId id={post.id} />
 ```
-- Post/index.jsx
-```js
-import Head from "next/head";
-import { CommentsByPostId } from "src/components/Comments/CommentsByPostId";
 
-import { usePost } from "src/hooks/usePost";
+> を記述すれば commentId が５個取得できている。
 
-export const Post = () => {
-  const { post, user, error, isLoading } = usePost();
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  return (
-    <div>
-      <Head>
-        <title>{post?.title}</title>
-      </Head>
-      <h1>{post?.title}</h1>
-      <p>{post?.body}</p>
-      {user?.name ? <div>Created by {user.name}</div> : null}
-      <CommentsByPostId id={post.id}/>
-    </div>
-  );
-};
-```
-- pages/posts/[id]/index.jsx
-```js
-import { Header } from "src/components/Header";
-import { Post } from "src/components/Post";
-
-const PostsId = () => {
-  return (
-    <div>
-      <Header />
-      <Post />
-    </div>
-  );
-};
-
-export default PostsId;
-```
-> posts/index.jsxは
-```js
-import Link from "next/link";
-import { usePosts } from "src/hooks/useFetchArray";
-
-export const Posts = () => {
-  const { data, error, isLoading, isEmpty } = usePosts();
-
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  if (isEmpty) {
-    return <div>データは空です</div>;
-  }
-
-  return (
-    <ol>
-      {data.map((post) => {
-        return (
-          <li key={post.id}>
-            <Link href={`/posts/${post.id}`}>
-              <a>{post.title}</a>
-            </Link>
-          </li>
-        );
-      })}
-    </ol>
-  );
-};
-```
 ---
+
 > リファクタリング
-- useFetchArray.jsxの一番下を
+
+- useFetchArray.jsx の一番下を
+
 ```js
 export const useCommentsByPostsId = (id) => {
- return useFetchArray(id? `${API_URL}/comments?postId=${id}`:null);
-}
+	return useFetchArray(id ? `${API_URL}/comments?postId=${id}` : null);
+};
 ```
+
 > に変更。
-> Post/index.jsxをリファクタリングして、UserByUserIdを作る
-- UserフォルダにUserByUserId.jsxを作る。フォルダ内に
+> Post/index.jsx をリファクタリングして、UserByUserId を作る
+
+- User フォルダに UserByUserId.jsx を作る。フォルダ内に
+
 ```js
-export const UserByPostId = () => {
+export const UserByUserId = () => {
   return (
 
   )
 }
 ```
-> として、Post/index.jsxから
+
+> として、Post/index.jsx から
+
 ```js
 <div>Created by {user.name}</div>
 ```
-> をコピーして、return内に貼り付け。
-- hooks/usePost.indexから
+
+> をコピーして、return 内に貼り付け。
+
+- hooks/usePost.index から
+
 ```js
-const {data: user, error: userError} = useSWR(
-      post?.userId
-      ?`https://jsonplaceholder.typicode.com/users/${post.userId}`
-      : null,
-      fetcher
-    );
+const { data: user, error: userError } = useSWR(
+	post?.userId
+		? `https://jsonplaceholder.typicode.com/users/${post.userId}`
+		: null,
+	fetcher
+);
 ```
+
 > の部分をコピーして、貼り付け
+
 ```js
-export const UserByPostId = () => {
-  const {data: user, error: userError} = useSWR(
-    post?.userId
-    ?`https://jsonplaceholder.typicode.com/users/${post.userId}`
-    : null,
-    fetcher
-  );
-  return (
-    <div>Created by {user.name}</div>
-  )
-}
+export const UserByUserId = () => {
+	const { data: user, error: userError } = useSWR(
+		post?.userId
+			? `https://jsonplaceholder.typicode.com/users/${post.userId}`
+			: null,
+		fetcher
+	);
+	return <div>Created by {user.name}</div>;
+};
 ```
-> その後、同じ部分を
+
+> その部分に
+
 ```js
 import useSWR from "swr";
 import { fetcher } from "src/utils/fetcher";
-
-export const UserByPostId = (props) => {
-  const { data, error } = useSWR(
-    props.id ? `https://jsonplaceholder.typicode.com/users/${props.id}` : null,
-    fetcher
-  );
-
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  return <div>Created by {data.name}</div>;
-};
 ```
+
+> をインポートして、props を 3 箇所記述
+
+- { data: user, error: userError }の部分は{ data, error }に変更
+
+```js
+export const UserByUserId = (props) => {
+	const { data, error } = useSWR(
+		props.id ? `https://jsonplaceholder.typicode.com/users/${props.id}` : null,
+		fetcher
+	);
+```
+
+> Created by {user.name}は
+> Created by {data.name}に変更
+
+```js
+return <div>Created by {data.name}</div>;
+```
+
 > とする。
-> Post/index.jsxを変更し
+
+- error の記述は
+
+```js
+if (error) {
+	return <div>{error.message}</div>;
+}
+```
+
+> とする
+
+> Post/index.jsx で UserByUserId id={post.userId}を呼び出す
+
 ```js
 import Head from "next/head";
 import { CommentsByPostId } from "src/components/Comments/CommentsByPostId";
@@ -455,40 +388,48 @@ import { UserByUserId } from "src/components/User/UserByUserId";
 import { usePost } from "src/hooks/usePost";
 
 export const Post = () => {
-  const { post, user, error, isLoading } = usePost();
+	const { post, user, error, isLoading } = usePost();
 
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+	if (error) {
+		return <div>{error.message}</div>;
+	}
 
-  return (
-    <div>
-      <Head>
-        <title>{post?.title}</title>
-      </Head>
-      <h1>{post?.title}</h1>
-      <p>{post?.body}</p>
-      {/* {user?.name ? <div>Created by {user.name}</div> : null} */}
-      <UserByUserId id={post.userId}/>
+	return (
+		<div>
+			<Head>
+				<title>{post?.title}</title>
+			</Head>
+			<h1>{post?.title}</h1>
+			<p>{post?.body}</p>
+			{/* {user?.name ? <div>Created by {user.name}</div> : null} */}
+			<UserByUserId id={post.userId} />
 
-      <CommentsByPostId id={post.id}/>
-    </div>
-  );
+			<CommentsByPostId id={post.id} />
+		</div>
+	);
 };
 ```
-> UserByPostIdフォルダ名をUserByUserIdに変更
+
+> これで５つのコメントが取れている。
+
 ---
-> hooks/usePost.jsxから
+
+> hooks/usePost.jsx から
+
 ```js
-const {data: post, error: postError} = useSWR(
-    router.query.id? `https://jsonplaceholder.typicode.com/posts/${router.query.id}` : null,
-    fetcher
-    );
+const { data: post, error: postError } = useSWR(
+	router.query.id
+		? `https://jsonplaceholder.typicode.com/posts/${router.query.id}`
+		: null,
+	fetcher
+);
 ```
-> をコピーして、Post/index.jsxのexport const Post = () => {の下に貼り付け
+
+> をコピーして、Post/index.jsx の export const Post = () => {の下に貼り付け
+
 ```js
 export const Post = () => {
   const {data: post, error: postError} = useSWR(
@@ -496,72 +437,92 @@ export const Post = () => {
     fetcher
     );
 ```
-> とする。
-> 先にあった、const { post, user, error, isLoading } = usePost();は削除
-> Post/index.jsxは
+
+> として、
+
+- const router = useRouter();も追加する
+  > 先にあった、const { post, user, error, isLoading } = usePost();は削除
+- usePost.jsx から
+
+```js
+const { data: user, error: userError } = useSWR(
+	post?.userId
+		? `https://jsonplaceholder.typicode.com/users/${post.userId}`
+		: null,
+	fetcher
+);
+```
+
+> Post/index.jsx は
+
 ```js
 import Head from "next/head";
 import { useRouter } from "next/router";
 import { CommentsByPostId } from "src/components/Comments/CommentsByPostId";
 import { UserByUserId } from "src/components/User/UserByUserId";
-import { usePost } from "src/hooks/usePost";
+// import { usePost } from "src/hooks/usePost";
 
 export const Post = () => {
-const {post, error, isLoading } = usePost();
+	const { post, error, isLoading } = usePost();
 
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+	if (error) {
+		return <div>{error.message}</div>;
+	}
 
-  return (
-    <div>
-      <Head>
-        <title>{post?.title}</title>
-      </Head>
-      <h1>{post?.title}</h1>
-      <p>{post?.body}</p>
+	return (
+		<div>
+			<Head>
+				<title>{post?.title}</title>
+			</Head>
+			<h1>{post?.title}</h1>
+			<p>{post?.body}</p>
 
-      <UserByUserId id={post.userId} />
+			<UserByUserId id={post.userId} />
 
-      <CommentsByPostId id={post.id} />
-    </div>
-  );
+			<CommentsByPostId id={post.id} />
+		</div>
+	);
 };
 ```
-> として、usePost.jsxから
+
+> として、usePost.jsx から
+
 ```js
-const {data: user, error: userError} = useSWR(
-      post?.userId
-      ?`https://jsonplaceholder.typicode.com/users/${post.userId}`
-      : null,
-      fetcher
-    );
+const { data: user, error: userError } = useSWR(
+	post?.userId
+		? `https://jsonplaceholder.typicode.com/users/${post.userId}`
+		: null,
+	fetcher
+);
 ```
 > を削除
-> useComment.jsxを全コピー、usePost.jsxを全削除して、そこに貼り付け
+> useComment.jsx を全コピー、usePost.jsx を全削除して、そこに貼り付け
+
 ```js
 import { useRouter } from "next/router";
 import useSWR from "swr";
 
 export const usePost = () => {
-  const router = useRouter();
-  const { data, error } = useSWR(
-    router.query.id
-      ? `https://jsonplaceholder.typicode.com/posts/${router.query.id}`
-      : null
-  );
+	const router = useRouter();
+	const { data, error } = useSWR(
+		router.query.id
+			? `https://jsonplaceholder.typicode.com/posts/${router.query.id}`
+			: null
+	);
 
-  return {
-    data,
-    error,
-    isLoading: !data && !error,
-  };
+	return {
+		data,
+		error,
+		isLoading: !data && !error,
+	};
 };
 ```
-> とする。Post/index.jsxは
+
+> とする。Post/index.jsx は
+
 ```js
 import Head from "next/head";
 import { useRouter } from "next/router";
@@ -570,73 +531,66 @@ import { UserByUserId } from "src/components/User/UserByUserId";
 import { usePost } from "src/hooks/usePost";
 
 export const Post = () => {
-const {data, error, isLoading } = usePost();
+	const { data, error, isLoading } = usePost();
 
-  if (isLoading) {
-    return <div>ローディング中</div>;
-  }
-  if (error) {
-    return <div>{error.message}</div>;
-  }
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+	if (error) {
+		return <div>{error.message}</div>;
+	}
 
-  return (
-    <div>
-      <Head>
-        <title>{data?.title}</title>
-      </Head>
-      <h1>{data?.title}</h1>
-      <p>{data?.body}</p>
+	return (
+		<div>
+			<Head>
+				<title>{data?.title}</title>
+			</Head>
+			<h1>{data?.title}</h1>
+			<p>{data?.body}</p>
 
-      <UserByUserId id={data.userId} />
+			<UserByUserId id={data.userId} />
 
-      <CommentsByPostId id={data.id} />
-    </div>
-  );
+			<CommentsByPostId id={data.id} />
+		</div>
+	);
 };
 ```
-> としてuserByUserId.jsxは
+
+> として userByUserId.jsx は
+
 ```js
 import useSWR from "swr";
 import { fetcher } from "src/utils/fetcher";
 
 export const UserByUserId = (props) => {
+	const { data, error } = useSWR(
+		props.id ? `https://jsonplaceholder.typicode.com/users/${props.id}` : null,
+		fetcher
+	);
 
-  const { data, error } = useSWR(
-    props.id ? `https://jsonplaceholder.typicode.com/users/${props.id}` : null,
-    fetcher
-  );
+	if (!data && !error) {
+		return <div>ローディング中</div>;
+	}
 
-  if (!data && !error) {
-    return <div>ローディング中</div>
-  }
+	if (error) {
+		return <div>{error.message}</div>;
+	}
 
-  if (error) {
-    return <div>{error.message}</div>;
-  }
-
-  return <div>Created by {data.name}</div>;
+	return <div>Created by {data.name}</div>;
 };
 ```
+
 > とする。
+
 ---
+
 > コミット
+
 - ✨ 投稿の詳細ページにコメントを表示
+
 ---
-##　27の宿題
-1. Usersをクリックしたら、そのユーザーが投稿した記事やコメントを表示させる。
-2. Commentsをクリックしたら、そのユーザー名と書いていた記事を表示させる
 
+##　 27 の宿題
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+1. Users をクリックしたら、そのユーザーが投稿した記事やコメントを表示させる。
+2. Comments をクリックしたら、そのユーザー名と書いていた記事を表示させる
