--- a/#26.md
+++ b/#26.md
@@ -277,7 +277,7 @@ export const CommentsByPostId = (props) => {
 - components/Post/index.jsx に
 
 ```js
-<CommentsByPostId id={post.id} />
+<CommentsByPostId id={data.id} />
 ```
 
 > を記述すれば commentId が５個取得できている。
