--- a/#27宿題の答え合わせ.md
+++ b/#27宿題の答え合わせ.md
@@ -202,19 +202,27 @@ return (
 - useFetchArray
 - useCommentsByPostsId を useCommentsByPostId に変更
 - - comments/CommentsByPostId.jsx 内も同じように変更
-
+>  並び替え
 ```js
-//  users
-
-export const useUsers = () => {
-	return useFetchArray(`${API_URL}/users`);
+// post
+export const usePosts = () => {
+    return useFetchArray(`${API_URL}/posts`);
 };
 
-//  comments
+export const usePostsByUserId = (id) => {
+    return useFetchArray(id ? `${API_URL}/posts?userId=${id}` : null);
+};
+// users
 
+export const useUsers = () => {
+    return useFetchArray(`${API_URL}/users`);
+};
+
+// comments
 export const useComments = () => {
 	return useFetchArray(`${API_URL}/comments`);
 };
+
 
 export const useCommentsByPostId = (id) => {
 	return useFetchArray(id ? `${API_URL}/comments?postId=${id}` : null);
