--- a/#1.md
+++ b/#1.md
@@ -34,6 +34,9 @@
 * GitHubリポジトリの立ち上げ
 * GitHubへのpush
 * Vercelとの連携
+* * VercelのページでNew Project をクリック
+* * Import Git Repository の中にGitHubに立ち上げたファイル名があるのでこれをImport
+* * ファイル名を入力してデプロイする
 
 
 
