--- a/#13表示.非表示.md
+++ b/#13表示.非表示.md
@@ -5,7 +5,7 @@
 ### 文字列
 
 ```js
-const [text,setText]=useState("");
+const [text, setText] = useState("");
 ```
 
 これを
@@ -17,7 +17,7 @@ const [count, setCount] = useState(1);
 の下に記述。そして
 
 ```js
-<input type='text' value={text}/>
+<input type="text" value={text} />
 ```
 
 を＜ button ＞タグの下に記述
@@ -25,23 +25,31 @@ const [count, setCount] = useState(1);
 - onChange でイベントの取得し setText で管理する
 
 ```js
-<input type='text' value={text} onChange={e => {
- setText(e.target.value)
-}}
+<input
+	type="text"
+	value={text}
+	onChange={(e) => {
+		setText(e.target.value);
+	}}
 />
 ```
+
 - log で text を console に表示
-- - logはreturn の上に記述
+- - log は return の上に記述
 - setText を用いて文字の制御
   - text の length が 5 文字以上なら return して何もしない記述
 
 ```js
-onChange={(e) => {
-  if (text.length >= 5) {
-    return;
-  }
-  setText(e.target.value);
-}}
+<input
+	type="text"
+	value={text}
+	onChange={(e) => {
+		if (text.length >= 5) {
+			return;
+		}
+		setText(e.target.value);
+	}}
+/>
 ```
 
 - input の onChange 以下を handleChange に書き換える
@@ -73,10 +81,13 @@ const handleChange=useCallback((e) {
 - - 5 文字以上になればアラート"5 文字以内にして下さい"を出す
 
 ```js
-if (e.target.value.length>5){
-  alert("5文字以内にしてください");
-  return;
-}
+const handleChange = useCallback((e) => {
+    if (e.target.value.length >= 5) {
+      alert ("5文字以内にして下さい");
+      return;
+    }
+    setText(e.target.value);
+  },[]);
 ```
 
 - トリミング処理
@@ -84,8 +95,9 @@ if (e.target.value.length>5){
 - setText(e.target.value);の部分を
 
 ```js
-setText(e.target.value.trim())
+setText(e.target.value.trim());
 ```
+
 > に変更する
 
 - - 記号とか大文字を打たせない制御などができる
@@ -93,41 +105,50 @@ setText(e.target.value.trim())
 ## 真偽値
 
 #### 真偽値の値に応じてカウントを表示、非表示にする方法
-
-```
+> const [text, setText] = useState("");の下に
+```js
 const [isShow,setIsShow]=useState(true);
 ```
 
 - 三項演算子
   jsx 文では return 文の中で if 文を使えないので三項演算子を使う
 - - true ならば count を実行
+
 ```js
 <h1>{count}</h1>
 ```
+
 > の部分を
 
 ```js
-{true ? <h1>{count}</h1> : null}
+{
+	true ? <h1>{count}</h1> : null;
+}
 ```
+
 > に変更
 
 - - false ならば null が実行
 
-```
+```js
 {false ? <h1>{count}</h1> : null}
 ```
 
 - 表示、非表示のボタンを配置し isShow の true,false を切り替える
 
-```
+```js
  {false ? <h1>{count}</h1> : null} の部分を
 ```
 
+```js
+{isShow ? <h1>{count}</h1> : null} 
 ```
-{isShow ? <h1>{count}</h1> : null} として
+> として
+```js
+<button onClick={handleClick}>ボタン</button>
 ```
-
-```
+> の下に
+```js
 <button onClick={()=> {
   setIsShow(false);
 }}>
@@ -137,7 +158,7 @@ const [isShow,setIsShow]=useState(true);
 
 - ボタンを押すことによって表示、非表示を切り替える
 
-```
+```js
 <button onClick={()=> {
   setIsShow((isShow) => {
     if (isShow === true){
@@ -152,37 +173,41 @@ const [isShow,setIsShow]=useState(true);
 ```
 
 - リファクタリング
+
 ```js
-  setIsShow((isShow) => {
-  if (isShow === true){
-  return false;
-  }else{
-  return true
-  }
-  })
+setIsShow((isShow) => {
+	if (isShow === true) {
+		return false;
+	} else {
+		return true;
+	}
+});
 ```
-  ↓
-  ```js
-  setIsShow((isShow) => {
-  return !isShow;
-  }
-  ```
-  ↓
-  ```js
-  setIsShow((isShow)=> !isShow);
-  ```
+
+↓
+
+```js
+setIsShow((isShow) => {
+return !isShow;
+}
+```
+
+↓
+
+```js
+setIsShow((isShow) => !isShow);
+```
+
 - 切り出し
 
 ```js
-<button onClick={handleDisplay}>
-{isShow ? "非表示" : "表示"}
-</button>
+<button onClick={handleDisplay}>{isShow ? "非表示" : "表示"}</button>
 ```
 
 ```js
-const handleDisplay =useCallback(()=> {
-  setIsShow((isShow) => !isShow);
-},[]);
+const handleDisplay = useCallback(() => {
+	setIsShow((isShow) => !isShow);
+}, []);
 ```
 
 ### コミット
