--- a/#31.md
+++ b/#31.md
@@ -64,7 +64,7 @@ export const getServerSideProps = async (ctx) => {
 	};
 };
 ```
-> をコピーして、users/index.jsxに貼り付け、いらない部分を削除
+> をコピーして、users/index.jsxのimportの下に貼り付け、いらない部分を削除
 - // ユーザの投稿の取得
 - userは全てusersに変更
 - [POSTS_API_URL]: postsData,は削除
@@ -92,8 +92,9 @@ const Users = (props) => {
 ```
 > となる。
 #### SWR のイミュータブルについて
-> useFetchArray.jsxのimport useSWR from "swr";を
-- import useSWRImmutable from "swr/immutable";
+- useFetchArray.jsxのimport useSWR from "swr";を
+- - import useSWRImmutable from "swr/immutable";
+- const { data, error } = useSWR(url);を
 - const { data, error } = useSWRImmutable(url);
 > とする
 - useUser.jsxも同じように
