--- a/#35.md
+++ b/#35.md
@@ -1,20 +1,173 @@
-### IRS講座
+### IRS 講座
+
 #### まずはリファクタリング
-- コードの共通化　
+
+- コードの共通化
 - - https://jsonplaceholder.typicode.com/
-- utilsフォルダにconst.jsを作成
-- useFetchArrayっフォルダから
+- utils フォルダに const.js を作成
+- useFetchArray っフォルダから
 - - const API_URL = "https://jsonplaceholder.typicode.com";をコピーして貼り付け
+
 ```js
-export　const API_URL = "https://jsonplaceholder.typicode.com";
+export const API_URL = "https://jsonplaceholder.typicode.com";
 ```
->とする
+
+> とする
 > 検索　https://jsonplaceholder.typicode.com/
-- useFetchArray のconst API_URL = "https://jsonplaceholder.typicode.com";を削除
-> その下の　return useFetchArray(`${API_URL}/posts`);の部分で{API_URL}を使って
+
+- useFetchArray の const API_URL = "https://jsonplaceholder.typicode.com";を削除
+  > その下の　 return useFetchArray(`${API_URL}/posts`);の部分で{API_URL}を使って
 - import { API_URL } from "src/utils/const";を作る
-- 検索欄に8個のファイルが残っているので、これを{ API_URL } に変更する
+- 検索欄に 8 個のファイルが残っているので、これを{ API_URL } に変更する
+
 ---
+
 > 全て終われば一旦コミット
-- 🎨 APIのURLをconstから読み込むように変更
+
+- 🎨 API の URL を const から読み込むように変更
+
 ---
+
+#### Comments の部分を ISR 化
+
+> 自前の API を用意する必要があるので json Placeholder の json Server の機能を使って data を作成
+
+- ターミナルから　 yarn add json-server を導入
+- 下部のルートのところに db.json ファイルの作成
+- - json-Server の Getting started から下の部分をコピーして貼り付け
+
+```js
+{
+  "posts": [
+    { "id": 1, "title": "json-server", "author": "typicode" }
+  ],
+  "comments": [
+    { "id": 1, "body": "some comment", "postId": 1 }
+  ],
+  "profile": { "name": "typicode" }
+}
+```
+
+> npm install -g json-server 　この部分はグローバルに PC に json-server をインストールして使う時だけ使用できるもの
+> 今回は、それは使用しない
+
+- PC にインストールしていない場合
+  -- package.json にスクリプトとして記載する
+
+```js
+"scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+```
+
+> の下に
+
+```js
+"db": "json-server --watch db.json"
+```
+
+> を記載
+> このままでは、ポートがバッティングするので
+
+- "db": "json-server --watch db.json --port 3001"とする
+- ここで一旦　 yarn db するとターミナルに
+
+```js
+Resources
+  http://localhost:3001/posts
+  http://localhost:3001/comments
+  http://localhost:3001/profile
+
+  Home
+  http://localhost:3001
+```
+
+> と表示されるがここに表示されている posts,comments,profile は
+> db.json の
+
+```js
+{
+ "posts": [
+   { "id": 1, "title": "json-server", "author": "typicode" }
+ ],
+ "comments": [
+   { "id": 1, "body": "some comment", "postId": 1 }
+ ],
+ "profile": { "name": "typicode" }
+}
+```
+
+> この部分になる
+
+- db.json で書かれたものを json-server は API 化できる
+- この機能を使って ISR 化していく
+  > db.json を
+
+```js
+{
+  "comments": []
+}
+```
+
+> と comments だけにして JsonPlaceholder の comments から
+
+```js
+{
+    "postId": 1,
+    "id": 1,
+    "name": "id labore ex et quam laborum",
+    "email": "Eliseo@gardner.biz",
+    "body": "laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium"
+  },
+  {
+    "postId": 1,
+    "id": 2,
+    "name": "quo vero reiciendis velit similique earum",
+    "email": "Jayne_Kuhic@sydney.com",
+    "body": "est natus enim nihil est dolore omnis voluptatem numquam\net omnis occaecati quod ullam at\nvoluptatem error expedita pariatur\nnihil sint nostrum voluptatem reiciendis et"
+  },
+
+```
+> の部分を２件分コピーして[]内に貼り付け
+> localhost3001のcommentsを確認すると
+```
+[
+  {
+    "postId": 1,
+    "id": 1,
+    "name": "id labore ex et quam laborum",
+    "email": "Eliseo@gardner.biz",
+    "body": "laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium"
+  },
+  {
+    "postId": 1,
+    "id": 2,
+    "name": "quo vero reiciendis velit similique earum",
+    "email": "Jayne_Kuhic@sydney.com",
+    "body": "est natus enim nihil est dolore omnis voluptatem numquam\net omnis occaecati quod ullam at\nvoluptatem error expedita pariatur\nnihil sint nostrum voluptatem reiciendis et"
+  }
+]
+```
+> となっている
+> この部分に追加変更を加えてSG化されたページにも反映されるかどうかを検証する
+> それがうまく起動したらISRはちゃんを機能しているということになる。
+-  http://localhost:3001/commentsをコピー
+- const.js を開く
+```js
+export const API_URL = "https://jsonplaceholder.typicode.com";
+```
+> を
+```js
+export const API_URL = "http://localhost:3001";
+```
+> とする
+- yarn build で確認
+- エラーが出るよー  どうしてー❓
+
+
+
+
+
+
