--- a/#36.md
+++ b/#36.md
@@ -106,7 +106,76 @@ const { data, error, isLoading, isEmpty } = useFetchArray(
    - Post/index.jsxでは、usePostを読み込んでいるので
    - - hooks/usePost.jsxを開く
    > このページもuseFetchArrayのような感じでまとめていく
-   - 13:26まで完了
+   - hooksにuseFetch.jsxファイルを作成
+   - - そこにusePost.jsxをコピペ
+```js
+export const usePost = (id) => {
+  
+  const { data, error } = useSWR(
+    id
+      ? `${ API_URL }/posts/${id}`
+      : null
+  );
+ ```
+ > の部分を
+ ```js
+ export const useFetch = (url) => {
+	
+	const { data, error } = useSWR(url);
+ ```
+ - useSWR(url)の部分をuseSWRImmutable(url);として
+ - - インポートもimport useSWRImmutable from "swr/immutable";とする
+ - import { API_URL } from "src/utils/const";の部分は削除
+ - このuseFetchを用いて色々なデータを取得していく
+  > Post/index.jsxの
+```js
+export const Post = () => {
+  const router = useRouter();
+const {data, error, isLoading } = usePost(router.query.id);
+```
+> を
+```js
+export const PostDetail = () => {
+	const router = useRouter();
+	const { data, error, isLoading } = useFetch(
+		router.query.id ? `${API_URL}/posts/${router.query.id}` : null
+	);
+```
+> と変更する 
+- Post/index.jsxをPost/PostDetail.jsxにファイル名を変更
+- posts/[id]/index.jsxの＜Post /＞を＜PostDetail/＞に変更(インポートも)
+---
+> Post/PostByCommentId.jsxの変更
+```js
+export const PostByCommentId = (props) => {
+  const { data, error, isLoading } = usePost(props.id);
+```
+> を
+```js
+
+export const PostTitleByCommentId = (props) => {
+  const { data, error, isLoading } = usePost(props.id);
+```
+- Post/PostByCommentIdをPost/PostTitleByCommentIdに変更
+```js
+export const PostTitleByCommentId = (props) => {
+   const { data, error, isLoading } = usePost(props.id);
+```
+> の部分を
+```js
+export const PostTitleByCommentId = (props) => {
+
+  const { data, error, isLoading } = useFetch(
+		props.id ? `${API_URL}/posts/${props.id}` : null
+	);
+```
+> に変更
+> 18:34から
+
+
+
+
+
 
 
 
