--- a/#36.md
+++ b/#36.md
@@ -169,8 +169,150 @@ export const PostTitleByCommentId = (props) => {
 		props.id ? `${API_URL}/posts/${props.id}` : null
 	);
 ```
-> に変更
-> 18:34から
+> に変更して、Postsフォルダを削除
+---
+#### usersのリファクタリング
+> pages/users/index.jsxのUsersComponentへ移動
+- Users/index.jsxのexport const UsersComponentを
+- - export const UsersListに変更
+- - pages/users/index.jsxのUsersComponentもUsersListに変更
+- pages/users/index.jsxをpages/users/UserList.jsxに変更して、Userフォルダに移動
+- Usersフォルダは削除
+> UsersList.jsxのconst { data, error, isLoading, isEmpty } = useUsers();の
+- useUsersをコマンド+ クリック　して、呼び出し元へ移動
+- useFetchArray.jsxのuseFetchArray(`${API_URL}/users`)をコピーして
+- 先程のuseUsers()と置き換える
+- - useFetchArrayと{API_URL}をインポート
+```js
+//  export const useUsers = () => {
+//    return useFetchArray(`${API_URL}/users`);
+//  };
+```
+> の部分はコメントアウト
+---
+#### ユーザー詳細ページ
+> users/[id]/index.jsxのUserComponentへ移動
+- export const UserComponentをexport const UserDetailに変更
+- - users/[id]/index.jsxのUserComponentもUserDetailに変更
+- User/index.jsxをUserDetail.jsxに名称変更
+> UserDetail.jsxのuseUser();の呼び出し元へ移動
+- useUser.jsxのrouter.query.id ? `${API_URL}/users/${router.query.id}` : null
+をコピーして
+- - UserDetail.jsxのuseUser()をuseFetch(router.query.id ? `${API_URL}/users/${router.query.id}` : null);に変更
+- const router = useRouter();を追加
+```js
+export const UserDetail = () => {
+	const router = useRouter();
+	const { data, error, isLoading } = useFetch(router.query.id ? `${API_URL}/users/${router.query.id}` : null);
+```
+> とする
+---
+#### UserByUserId.jsxのリファクタリング
+> UserByUserIdが使われている場所を検索
+> PostDetail.jsxで使われている
+- UserByUserId.jsxのexport const UserByUserIdの名前の変更
+- - export const UserNameByUserIdと変更する
+- 呼出先のPostDetail.jsxのUserByUserIdをUserNameByUserIdに変更
+- UserByUserId.jsxをUserNameByUserId.jsxに名称を変更して
+```js
+const { data, error } = useSWR(
+    props.id ? `${ API_URL }/users/${props.id}` : null,
+    fetcher
+  );
+```
+> この部分もuseFetchに切り替えていく
+```js
+import { API_URL } from "src/utils/const";
+import { useFetch } from "src/hooks/useFetch";
+
+export const UserNameByUserId = (props) => {
+	const { data, error, isLoading } = useFetch(
+		props.id ? `${API_URL}/users/${props.id}` : null
+	);
+
+	if (isLoading) {
+		return <div>ローディング中</div>;
+	}
+
+	if (error) {
+		return <div>{error.message}</div>;
+	}
+
+	return <div className="text-lg">Created by {data.name}</div>;
+};
+
+```
+---
+#### comments/index.jsxのリファクタリング
+> これまでと同じようにしていく
+- CommentsComponentをCommentListと変更
+- インポート先も変更
+- Comments/index.jsxをCommentList.jsxに変更して、フォルダをCommentに移動
+- CommentList.jsxのuseComments()をuseFetchArray(`${API_URL}/comments`)に変更
+```js
+// export const useComments = () => {
+//   return useFetchArray(`${API_URL}/comments`);
+// };
+```
+> コメントアウトする
+---
+> Comments/CommentsByPostId.jsxの変更
+- CommentsByPostId()をCommentsListByPostId()に変更
+- - 呼出先も変更する
+- Comments/CommentsByPostId.jsxをCommentsListByPostId.jsxに名称を変更
+- - ファイルをCommentに移動して、Commentsフォルダを削除
+> CommentsListByPostId.jsxのuseCommentsByPostId(props.id)の部分を
+- useFetchArray(id? `${API_URL}/comments?postId=${id}`:null)に変更して
+```js
+export const CommentsListByPostId = (props) => {
+  const { data, error, isLoading, isEmpty } = useFetchArray(props.id? `${API_URL}/comments?postId=${props.id}`:null);
+```
+> となる
+> これでも良いが、パラメーターよりエンドポイントを使う方がわかりやすいのでさらに変更する
+- comments?postId=${props.id}の部分を
+- - posts/${props.id}/commentsとする
+- useFetchArray.jsxの不要部分とコメントアウト部分を削除
+---
+#### comments/[id]/index.jsxのリファクタリング
+> CommentComponentをCommentDetailに変更,
+> 関係部分も変更
+- Comment/index.jsxをCommentDetail.jsxに変更
+- CommentDetail.jsxのuseComment()の部分もuseFetchを使って変更する
+- - const router = useRouter();を貼り付け
+```js
+export const CommentDetail = () => {
+	const router = useRouter();
+	const { data, error, isLoading } = useFetch(router.query.id ? `${API_URL}/comments/${router.query.id}` : null);
+  ```
+> として、必要部分をインポートする
+- useComment.jsx,useUser.jsxを削除
+- utils/fetcher.jsの削除
+- HeaderをLayoutに入れる
+- ＜Header/ ＞を使用部分を全て削除
+- Layout部分を
+```js
+export const Layout = (props) => {
+  return <div className="flex flex-col items-center mx-auto px-2 min-h-screen max-w-2xl ">
+    <Header/>
+    {props.children}</div>;
+};
+
+```
+> にHeaderを入れる
+- Header/index.jsxをHeader.jsxに変更して、Layoutフォルダ入れる
+- - Headerフォルダを削除
+- srcフォルダにlayoutsフォルダを作成
+- - Layoutをその中に入れる
+<!-- Explorer: Compact Folders このチェックを外すと何も入っていないフォルダでも階層表示される-->
+- Layoutを AppLayoutに名称変更
+- - export const AppLayout()に変更
+- _app.jsxも変更
+
+
+
+
+
+
 
 
 
